third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-stable/transmute-mut-src-generic.stderr
error[E0405]: cannot find trait `FromBytes` in this scope
  --> tests/ui-stable/transmute-mut-src-generic.rs:15:31
   |
15 | fn transmute_mut<T: AsBytes + FromBytes>(t: &mut T) -> &mut u8 {
   |                               ^^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
11 + use zerocopy::FromBytes;
   |
